@@ -5,7 +5,8 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add lead image.
+  [mathias.leimgruber]
 
 
 1.4 (2013-09-20)
